# aruco_detection

./: README.md
aruco_detector/: CMakeLists.txt  package.xml
aruco_detector/include/: aruco_detector.hpp
aruco_detector/launch/: aruco_node.launch
aruco_detector/src/: aruco_detector.cpp  aruco_detector_node.cpp
color_detector/: CMakeLists.txt
color_detector/src/: color_detector_node.cpp
ocam/launch/: ocam_ros.launch
pose_estimator/: CMakeLists.txt
pose_estimator/include/pose_estimator/: pose_estimator.hpp
pose_estimator/src/: pose.cpp  pose_aruco.cpp  pose_estimator.cpp
